add register and update swagger docs
