# docs/swagger.json
@@ -45,7 +45,7 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "authorization token (value: \\",
+                        "description": "authorization token (value: Bearer \u003cjwt-token\u003e)",
                         "name": "Authorization",
                         "in": "header",
                         "required": true
@@ -67,6 +67,9 @@
                     "400": {
                         "description": "Bad Request"
                     },
+                    "403": {
+                        "description": "Forbidden"
+                    },
                     "500": {
                         "description": "Internal Server Error"
                     }
@@ -86,7 +89,7 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "authorization token (value: \\",
+                        "description": "authorization token (value: Bearer \u003cjwt-token\u003e)",
                         "name": "Authorization",
                         "in": "header",
                         "required": true
@@ -98,6 +101,9 @@
                     },
                     "400": {
                         "description": "Bad Request"
+                    },
+                    "403": {
+                        "description": "Forbidden"
                     },
                     "500": {
                         "description": "Internal Server Error"
@@ -120,7 +126,7 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "authorization token (value: \\",
+                        "description": "authorization token (value: Bearer \u003cjwt-token\u003e)",
                         "name": "Authorization",
                         "in": "header",
                         "required": true
@@ -154,7 +160,7 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "authorization token (value: \\",
+                        "description": "authorization token (value: Bearer \u003cjwt-token\u003e)",
                         "name": "Authorization",
                         "in": "header",
                         "required": true
@@ -188,7 +194,7 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "authorization token (value: \\",
+                        "description": "authorization token (value: Bearer \u003cjwt-token\u003e)",
                         "name": "Authorization",
                         "in": "header",
                         "required": true
@@ -222,7 +228,7 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "authorization token (value: \\",
+                        "description": "authorization token (value: Bearer \u003cjwt-token\u003e)",
                         "name": "Authorization",
                         "in": "header",
                         "required": true
@@ -248,6 +254,9 @@
                     },
                     "400": {
                         "description": "Bad Request"
+                    },
+                    "403": {
+                        "description": "Forbidden"
                     },
                     "500": {
                         "description": "Internal Server Error"
@@ -293,7 +302,7 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "authorization token (value: \\",
+                        "description": "authorization token (value: Bearer \u003cjwt-token\u003e)",
                         "name": "Authorization",
                         "in": "header",
                         "required": true
@@ -324,6 +333,9 @@
                     "400": {
                         "description": "Bad Request"
                     },
+                    "403": {
+                        "description": "Forbidden"
+                    },
                     "500": {
                         "description": "Internal Server Error"
                     }
@@ -343,7 +355,7 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "authorization token (value: \\",
+                        "description": "authorization token (value: Bearer \u003cjwt-token\u003e)",
                         "name": "Authorization",
                         "in": "header",
                         "required": true
@@ -377,7 +389,7 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "authorization token (value: \\",
+                        "description": "authorization token (value: Bearer \u003cjwt-token\u003e)",
                         "name": "Authorization",
                         "in": "header",
                         "required": true
@@ -423,7 +435,7 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "authorization token (value: \\",
+                        "description": "authorization token (value: Bearer \u003cjwt-token\u003e)",
                         "name": "Authorization",
                         "in": "header",
                         "required": true
@@ -466,7 +478,7 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "authorization token (value: \\",
+                        "description": "authorization token (value: Bearer \u003cjwt-token\u003e)",
                         "name": "Authorization",
                         "in": "header",
                         "required": true
@@ -500,7 +512,7 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "authorization token (value: \\",
+                        "description": "authorization token (value: Bearer \u003cjwt-token\u003e)",
                         "name": "Authorization",
                         "in": "header",
                         "required": true
@@ -534,7 +546,7 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "authorization token (value: \\",
+                        "description": "authorization token (value: Bearer \u003cjwt-token\u003e)",
                         "name": "Authorization",
                         "in": "header",
                         "required": true
@@ -568,7 +580,7 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "authorization token (value: \\",
+                        "description": "authorization token (value: Bearer \u003cjwt-token\u003e)",
                         "name": "Authorization",
                         "in": "header",
                         "required": true
@@ -614,7 +626,7 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "authorization token (value: \\",
+                        "description": "authorization token (value: Bearer \u003cjwt-token\u003e)",
                         "name": "Authorization",
                         "in": "header",
                         "required": true
@@ -644,6 +656,9 @@
                     },
                     "400": {
                         "description": "Bad Request"
+                    },
+                    "403": {
+                        "description": "Forbidden"
                     },
                     "500": {
                         "description": "Internal Server Error"
@@ -689,7 +704,7 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "authorization token (value: \\",
+                        "description": "authorization token (value: Bearer \u003cjwt-token\u003e)",
                         "name": "Authorization",
                         "in": "header",
                         "required": true
@@ -720,6 +735,9 @@
                     "400": {
                         "description": "Bad Request"
                     },
+                    "403": {
+                        "description": "Forbidden"
+                    },
                     "500": {
                         "description": "Internal Server Error"
                     }
@@ -739,7 +757,7 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "authorization token (value: \\",
+                        "description": "authorization token (value: Bearer \u003cjwt-token\u003e)",
                         "name": "Authorization",
                         "in": "header",
                         "required": true
@@ -751,6 +769,9 @@
                     },
                     "400": {
                         "description": "Bad Request"
+                    },
+                    "403": {
+                        "description": "Forbidden"
                     },
                     "500": {
                         "description": "Internal Server Error"
@@ -773,7 +794,7 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "authorization token (value: \\",
+                        "description": "authorization token (value: Bearer \u003cjwt-token\u003e)",
                         "name": "Authorization",
                         "in": "header",
                         "required": true
@@ -812,7 +833,52 @@
         },
         "/users/login": {
             "post": {
-                "description": "login (user1: username: admin password: 1234 , user2: username:test password: test)",
+                "description": "login",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "users"
+                ],
+                "parameters": [
+                    {
+                        "description": "username",
+                        "name": "username",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    {
+                        "description": "password",
+                        "name": "password",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    },
+                    "500": {
+                        "description": "Internal Server Error"
+                    }
+                }
+            }
+        },
+        "/users/register": {
+            "post": {
+                "description": "register",
                 "consumes": [
                     "application/json"
                 ],
