# internal/handlers/user.go
@@ -11,6 +11,7 @@ import (
 
 type UserHandler interface {
 	Login(c *gin.Context)
+	Register(c *gin.Context)
 }
 
 type userHandler struct {
@@ -26,7 +27,7 @@ func NewUserHandler(service services.UserService, response response.JsonResponse
 }
 
 // Login godoc
-// @Description login (user1: username: admin password: 1234 , user2: username:test password: test)
+// @Description login
 // @Tags users
 // @Accept json
 // @Produce json
@@ -50,6 +51,39 @@ func (h *userHandler) Login(c *gin.Context) {
 	}
 
 	responseDTO := h.service.Login(loginInput)
+	if responseDTO.UserErrs != nil || responseDTO.ServerErr != nil {
+		h.response.ServerOrUserErrorResponse(c, responseDTO.Status, responseDTO.ServerErr, responseDTO.UserErrs, responseDTO.ResponseCode)
+		return
+	}
+
+	h.response.Response(c, 200, responseDTO.ResponseCode, responseDTO.Data)
+}
+
+// Register godoc
+// @Description register
+// @Tags users
+// @Accept json
+// @Produce json
+// @Param username body string true "username"
+// @Param password body string true "password"
+// @Success 200
+// @Failure 400
+// @Failure 500
+// @Router /users/register [post]
+func (h *userHandler) Register(c *gin.Context) {
+	var registerInput dtos.RegisterInput
+
+	// decode body
+	decoder := json.NewDecoder(c.Request.Body)
+	defer c.Request.Body.Close()
+	decoder.DisallowUnknownFields()
+	err := decoder.Decode(&registerInput)
+	if err != nil {
+		h.response.InvalidJSONErrorResponse(c, err)
+		return
+	}
+
+	responseDTO := h.service.Register(registerInput)
 	if responseDTO.UserErrs != nil || responseDTO.ServerErr != nil {
 		h.response.ServerOrUserErrorResponse(c, responseDTO.Status, responseDTO.ServerErr, responseDTO.UserErrs, responseDTO.ResponseCode)
 		return
